fix: profile overflow

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,10 +3,16 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  max-width: 450px;
+  max-width: 400px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+@media screen and (max-width: 900px) {
+  .profile__info {
+    max-width: 320px;
+  }
 }
 
 @media screen and (max-width: 540px) {
