--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,10 +3,15 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  max-width: 450px;
+  max-width: 400px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+@media screen and (max-width: 900px) {
+  .profile__name {
+    max-width: 320px;
+  }
 }
 
 @media screen and (max-width: 540px) {
@@ -14,7 +19,6 @@
     max-width: 350px;
   }
 }
-
 
 @media screen and (max-width: 475px) {
   .profile__name {
